--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,26 @@
+<!Doctype html>
 <html>
+    <head>
+        <title>
+        Article One | Athul
+        </title>
+    </head>
+        <body>
+            <div>
+                <a href='/'>Home</a>
+            </div>
+            <div>
+                <h1>Article One</h1>
+            </div>
+            <div>
+                Aug 12,2017
+            </div>
+            <div>
+                <p>Yooo man,OMKV OMKV OMKV</p>
+                <p>Yooo man,OMKV OMKV OMKV</p>
+                <p>Yooo man,OMKV OMKV OMKV</p>
+                <p>Yooo man,OMKV OMKV OMKV</p>
+            </div>
+        </body>
+    
 </html>
