[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am Athul,and This is my first web app.
         </div>
+                <div class="center text-big bold">
+                    <a href='/article-one'>Article One</a>
+                </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
