Update and rename article-two to article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-        Article One | Athul
+        Article Two | Athul
         </title>
         <meta name="viewport" content="width=device-width , initial-scale=1"/>
     </head>
@@ -11,7 +11,7 @@
                 <a href='/'>Home</a>
             </div>
             <div>
-                <h1>Article One</h1>
+                <h1>Article Two</h1>
             </div>
             <div>
                 Aug 12,2017
