--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,8 @@
         </div>
                 <div class="center text-big bold">
                     <a href='/article-one'>Article One</a>
+                    <a href='/article-two'>Article Two</a>
+                    <a href='/article-three'>Article Three</a>
                 </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
