[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width , initial-scale=1"/>
          <style>
             .container{
-                font-family:sans-serif;
-                color:black;
+                font-family:cursive;
+                color:#555555;
                 max-width:800px;
                 margin:0 auto;
                 padding-top:100px;
