[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -5,22 +5,35 @@
         Article Two | Athul
         </title>
         <meta name="viewport" content="width=device-width , initial-scale=1"/>
+        <style>
+            .container{
+                font-family:cursive;
+                color:#555555;
+                max-width:800px;
+                margin:0 auto;
+                padding-top:100px;
+                padding-left:20px;
+                padding-right:20px;
+            }
+        </style>
     </head>
         <body>
-            <div>
-                <a href='/'>Home</a>
-            </div>
-            <div>
-                <h1>Article Two</h1>
-            </div>
-            <div>
-                Aug 12,2017
-            </div>
-            <div>
-                <p>Yooo man,OMKV OMKV OMKV</p>
-                <p>Yooo man,OMKV OMKV OMKV</p>
-                <p>Yooo man,OMKV OMKV OMKV</p>
-                <p>Yooo man,OMKV OMKV OMKV</p>
+            <div class="container">
+                <div>
+                    <a href='/'>Home</a>
+                </div>
+                <div>
+                    <h1>Article Two</h1>
+                </div>
+                <div>
+                    Aug 12,2017
+                </div>
+                <div>
+                    <p>Yooo man,OMKV OMKV OMKV</p>
+                    <p>Yooo man,OMKV OMKV OMKV</p>
+                    <p>Yooo man,OMKV OMKV OMKV</p>
+                    <p>Yooo man,OMKV OMKV OMKV</p>
+                </div>
             </div>
         </body>
     
