--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,21 +1,12 @@
 <!Doctype html>
 <html>
     <head>
+         <link href="/ui/style.css" rel="stylesheet" />
         <title>
         Article Two | Athul
         </title>
         <meta name="viewport" content="width=device-width , initial-scale=1"/>
-        <style>
-            .container{
-                font-family:cursive;
-                color:#555555;
-                max-width:800px;
-                margin:0 auto;
-                padding-top:100px;
-                padding-left:20px;
-                padding-right:20px;
-            }
-        </style>
+      
     </head>
         <body>
             <div class="container">
