--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html>
     <head>
+         <link href="/ui/style.css" rel="stylesheet" />
         <title>
         Article Three | Athul
         </title>
