[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,9 @@
                     <a href='/article-two'>Article Two</a>
                     <a href='/article-three'>Article Three</a>
                 </div>
+                <script>
+                    alert("HI besh");
+                </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
