--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
                     <a href='/article-three'>Article Three</a>
                 </div>
                 <script>
-                    alert("HI besh");
+                    alert('HI besh');
                 </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
