--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="ui/stewie.png" class="img-medium"/>
+            <img id="stew" src="ui/stewie.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
@@ -16,9 +16,7 @@
                     <a href='/article-two'>Article Two</a>
                     <a href='/article-three'>Article Three</a>
                 </div>
-                <script>
-                    alert('HI besh');
-                </script>
+                
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
