--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,9 @@
                     <a href='/article-two'>Article Two</a>
                     <a href='/article-three'>Article Three</a>
                 </div>
+        <div class='footer'>
+        This Button<button id='counter'>Click ME!!!</button>has been clicked <span id='count'>0</span>times
+        </div>
                 
         <script type="text/javascript" src="/ui/main.js">
         </script>
